--- a/app/views/patrimonio/actaRecepcion/indexActaRecepcion.scala.html
+++ b/app/views/patrimonio/actaRecepcion/indexActaRecepcion.scala.html
@@ -2,40 +2,44 @@
 @import helper._
 @import models.auth._
 @import utils._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @import java.math.BigDecimal;var total=new java.math.BigDecimal(0);var ajustes=new java.math.BigDecimal(0);var tt=new java.math.BigDecimal(0);
 
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/patrimonio/actasRecepcion.js")" type="text/javascript"></script>
 }
- 
-@getClassEstado(i:Estado) = @{
+
+@getClassEstado(i:Estado,f:Date) = @{
 	var classEstado:String = new String()
-	if(i != null && i.id == 38){
-		classEstado = "borrador"
-	}else if(i != null && i.id == 41){
-		classEstado = "cancelada"
-	}else if(i != null && i.id == 40){
-		classEstado = "autorizado"
+	if(f==null){
+		classEstado = "red"
+	}else{
+		if(i != null && i.id == 38){
+			classEstado = "borrador"
+		}else if(i != null && i.id == 41){
+			classEstado = "cancelada"
+		}else if(i != null && i.id == 40){
+			classEstado = "autorizado"
+		}
 	}
 	classEstado
-	
-} 
- 
- 
+
+}
+
+
 @views.html.patrimonio.mainPatrimonio("Actas de recepción", scripts) {
 
 	<div class="page-header">
 		<div class="row">
 			<div class="col-sm-7">
 				<h1>Lista de actas</h1>
-			</div>			
+			</div>
 			<div class="col-sm-5">
-							 
+
 				<div class="pull-right btn-header">
 					<a href="@controllers.patrimonio.routes.ActasRecepcionController.crear"  class="form-control btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Acta</a>
-				</div> 
-				 
+				</div>
+
 				<div class="dropdown pull-right btn-header">
 					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 		<i class="glyphicon glyphicon-list-alt"></i> Reportes<span class="caret"></span>
@@ -46,7 +50,7 @@
 						<li><a id="reporteLineasActas" href="#" data-url="@controllers.patrimonio.routes.ActasRecepcionReportesController.reporteLineasActas()">Datos Lineas</a></li>
 					</ul>
 				</div>
-				
+
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 				 	<i class="glyphicon glyphicon-cog"></i>
@@ -55,27 +59,27 @@
 				  </button>
 				  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 				  	 @if(Permiso.check("expedientesPasarAOtroServicio")) {
-				    <li role="presentation"><a role="menuitem" id="accionPasarOtroServicio" tabindex="-1" href="#" 
+				    <li role="presentation"><a role="menuitem" id="accionPasarOtroServicio" tabindex="-1" href="#"
 				    						   data-url="@controllers.patrimonio.routes.ActasMovimientosController.modalPasarOtroServicio()">
 				    						   Pasar a otro servicio</a>
 				 	</li>
 				 	}
 				 	@if(Permiso.check("expedientesCancelarPase")) {
-				 	<li role="presentation"><a role="menuitem" id="cancelarPaseLista" tabindex="-1" href="#" 
+				 	<li role="presentation"><a role="menuitem" id="cancelarPaseLista" tabindex="-1" href="#"
 				    						   data-url="@controllers.patrimonio.routes.ActasMovimientosController.cancelarPaseLista()">
 				    						   Cancelar Pases</a>
 				 	</li>
 				 	}
 				 	@if(Permiso.check("expedientesAsignarMiServicio")) {
 				  	<li role="presentation">
-				  		<a role="menuitem" id="accionAsignarMiServicio" tabindex="-1" href="#" 
+				  		<a role="menuitem" id="accionAsignarMiServicio" tabindex="-1" href="#"
 				    						   data-url="@controllers.patrimonio.routes.ActasMovimientosController.modalAsignarMiServicio()">
 				    						   Asignar a Mi Servicio</a>
 				 	</li>
 				 	}
 				  </ul>
 				</div>
-				
+
 			</div>
 		</div>
 	</div>
@@ -107,7 +111,7 @@
 				  </button>
 				</div>
 			</div>
-		</div>	
+		</div>
 		<div class="row" >
 			<div class="form-group col-sm-2">
 				<label for="nombre" class="control-label">Orden provisión
@@ -119,7 +123,7 @@
 				@inputText(formBuscador("numero"), 'class -> "form-control", 'autofocus -> "autofocus")
 				</label>
 			</div>
-			
+
 			<!--  <div class="form-group col-sm-2">
 				<label for="nombre" class="control-label">Orden compra
 				@inputText(formBuscador("orden_compra"), 'class -> "form-control")
@@ -132,13 +136,13 @@
 						@inputText(formBuscador("proveedor_nombre"), 'name -> "", 'class -> "form-control", 'id -> "proveedor")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchProveedorActa" 
-										data-title="Selección de Proveedores" 
-										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.proveedor.simple" 
-										data-label="#proveedor" 
+										id="searchProveedorActa"
+										data-title="Selección de Proveedores"
+										data-url="@controllers.compras.routes.ProveedoresController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.proveedor.simple"
+										data-label="#proveedor"
 										data-field="#proveedor_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
@@ -153,37 +157,37 @@
 						@inputText(formBuscador("expediente.nombre"), 'name -> "", 'class -> "form-control", 'id -> "expediente")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchExpedienteActa" 
-										data-title="Selección de expediente" 
-										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.expediente.simple" 
-										data-label="#expediente" 
+										id="searchExpedienteActa"
+										data-title="Selección de expediente"
+										data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.expediente.simple"
+										data-label="#expediente"
 										data-field="#expediente_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
 						</span>
 					</div>
 				</label>
-			</div> 
+			</div>
 			<div class="col-sm-2">
-				<label for="deposito" class="control-label">Institucion</label> 
+				<label for="deposito" class="control-label">Institucion</label>
 				<div class="input-group">
 					@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
 					@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
 					<span class="input-group-addon">
-	                	<a href="#" id="searchDepositoActa" data-title="Selección de Institucion" 
-	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()" 
-	                	data-height="650" data-width="700" 
-	                	data-listen="modal.seleccion.deposito.simple" 
+	                	<a href="#" id="searchDepositoActa" data-title="Selección de Institucion"
+	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+	                	data-height="650" data-width="700"
+	                	data-listen="modal.seleccion.deposito.simple"
 	                	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
 	                </span>
 				</div>
 			</div>
 			<div class="col-sm-2">
 				<label class="control-label">Rubro
-				@select(formBuscador("orden_rubro_id"), 
+				@select(formBuscador("orden_rubro_id"),
 				OrdenRubro.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 				 </label>
 			</div>
@@ -191,20 +195,20 @@
 
 
 		<div class="row">
-			
-		
+
+
 		<div class="form-group col-sm-4">
 			<label for="nombre" class="control-label">Tipo de acta</label>
 			<div>@inputRadioGroup(formBuscador("tipo"), options = Seq("productos"->"Productos","servicios"->"Servicios","ambos"->"Ambos"), '_label -> "Gender")</div>
 		</div>
-		
+
 		<div class="col-sm-2">
 			<label class="control-label">Ejercicio
-			@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 
+			@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre},
 			'class -> "form-control select", '_default -> "Seleccionar")
 			</label>
 		</div>
-	
+
 		<div class="col-sm-2 input-group">
 			<label class="control-label">Fecha</label>
 			<div>
@@ -212,37 +216,45 @@
 				@inputText(formBuscador("fecha_hasta"), 'class -> "form-control inputDateMascara", 'id -> "hasta", 'placeholder -> "Hasta")
 			</div>
 		</div>
-		
+
 		<div class="col-sm-2">
-			<label class="control-label"> 
+			<label class="control-label">
 				Tipo Cuenta
-				@select(formBuscador("tipo_cuenta_id"), 
+				@select(formBuscador("tipo_cuenta_id"),
 				TipoCuenta.find.all().map { p => p.id.toString -> p.nombre}, 'class -> "form-control select", '_default -> "Seleccionar")
 			</label>
 		</div>
-			
+
 		<div class="col-sm-2">
 			<div class="checkbox">
-				<label class="control-label"> 
+				<label class="control-label">
 					Moneda Extrajera
 					@checkbox(formBuscador("tipo_moneda"))
-				</label> 
-			</div> 
-		</div>	
+				</label>
+			</div>
+		</div>
 	</div>
-	
+
 	<div class="row">
-		<div class="col-sm-2">
-			<label class="control-label"> 
-				Emergencia
-				@select(formBuscador("emergencia"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
-			</label>
+		<div class="col-sm-3">
+			<div class="col-sm-6">
+				<label class="control-label">
+					Emergencia
+					@select(formBuscador("emergencia"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
+				</label>
+			</div>
+			<div class="col-sm-6">
+				<label class="control-label">
+					Fecha OP
+					@select(formBuscador("fecha_op"),options(""->"","SI"->"SIN FECHA","NO"->"CON FECHA"), 'class -> "form-control select")
+				</label>
+			</div>
 		</div>
 		<div class="col-sm-2 input-group">
-				<label class="control-label"> 
+				<label class="control-label">
 					Servicio/depto
-					@select(formBuscador("organigrama_id"), 
-					Organigrama.find.where().eq("circuito_expediente", true).orderBy("nombre asc").findList().map{ p => p.id.toString -> p.nombre}, 'class -> 
+					@select(formBuscador("organigrama_id"),
+					Organigrama.find.where().eq("circuito_expediente", true).orderBy("nombre asc").findList().map{ p => p.id.toString -> p.nombre}, 'class ->
 					"form-control select", '_default -> "Seleccionar")
 				</label>
 			</div>
@@ -251,8 +263,8 @@
 			<label for="nombre" class="control-label">&nbsp;</label>
 			<button  class="form-control btn btn-primary"><i class="glyphicon glyphicon-search"></i> Buscar</button>
 			</div>
-		</div>	
-	
+		</div>
+
 		<div class="col-sm-2">
 			<div class="form-group">
 			<label for="nombre" class="control-label">&nbsp;</label>
@@ -263,14 +275,14 @@
 	</form>
 
    @if(buscador.getTotalRowCount == 0) {
-        
+
        <div class="well">
            <em>No se encuentran actas de recepción</em>
        </div>
-        
+
     } else {
-		
-		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).   
+
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
 		<table id="listaActasRecepcion" class="table table-striped table-bordered table-hover">
 			<thead>
 				<tr>
@@ -287,7 +299,7 @@
 					<th width="100">Subtotal</th>
 					<th width="100">Ajuste</th>
 					<th width="100">Total</th>
-					
+
 					<th width="100">Fecha</th>
 					<th width="80">Tipo</th>
 					<th>Tipo Cuenta</th>
@@ -297,13 +309,13 @@
 			<tbody>
 		        @for(acta <- buscador.getList) {
 			        @paginadorFicha.add(acta.id.toString)
-					<tr class="pointer @getClassEstado(acta.estado)" data-href="@controllers.patrimonio.routes.ActasRecepcionController.ver(acta.id)&@UriTrack.encode()">
+					<tr class="pointer @getClassEstado(acta.estado,if(acta.ordenProvision != null) { acta.ordenProvision.ordenCompra.fecha_provision}else{null} )" data-href="@controllers.patrimonio.routes.ActasRecepcionController.ver(acta.id)&@UriTrack.encode()">
 						<td><input type="checkbox" name="check_listado[]" value="@acta.id" class="notSeleccion" id="check-@acta.id"/></td>
-						<td>@acta.numero 
+						<td>@acta.numero
 							@if(acta.ordenProvision != null){
 								-@if(acta.ordenProvision.ordenCompra.tipo_moneda != null){<span style="color:green;font-weight:bold;font-size: 12px;">M.E.</span>}
 							}<br>
-							
+
 							@if(acta.ordenProvision.ordenCompra.expediente != null){
 								@if(acta.ordenProvision.ordenCompra.expediente.emergencia){
 									<span style="color:red;font-weight: bold;font-size:11px; ">Emergencia</span>
@@ -329,7 +341,7 @@
 					@{ajustes = ajustes.add(acta.getTotalAjustesConLineasAjustes())}
 					@{tt = tt.add(acta.getTotal())}
 				}
-				@paginadorFicha.guardar() 
+				@paginadorFicha.guardar()
 			</tbody>
 			<tfoot>
 				<td colspan="7"></td>
@@ -340,7 +352,7 @@
 				<td colspan="2"></td>
 			</tfoot>
 		</table>
-		
+
 		<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.patrimonio.routes.ActasRecepcionController.index())
 		</div>
@@ -349,37 +361,37 @@
 
 <script>
 $( function(){
-	
+
 	$("#desde, #hasta").mask("99/99/9999");
-	
+
 	var resultados = $('#resultadoActasRecepcion');
-	
+
 	var trs = $('#listaActasRecepcion tbody tr');
-	 
-	
+
+
 	$('#checkAll').click( function() {
 		sumarFilas(trs);
 	});
-	
+
 	$('input[name="check_listado[]"]').click( function() {
 		sumarFilas( $('#listaActasRecepcion tbody tr:has(td:eq(0):has(input:checked))') );
 	});
-	
+
 	function sumarFilas(trs) {
 		var total = 0; var ajustes = 0; var tt = 0;
 		trs.each( function() {
 			total += Number($('.total',this).attr("data-valor"));
 			ajustes += Number($('.ajustes',this).attr("data-valor"));
 			tt += Number($('.tt',this).attr("data-valor"));
-			 
+
 		});
-		
+
 		$(".totalfooter").html(formatNumberPesos(parseFloat(total).toFixed(2)));
 		$(".ajustesfooter").html(formatNumberPesos(parseFloat(ajustes).toFixed(2)));
 		$(".ttfooter").html(formatNumberPesos(parseFloat(tt).toFixed(2)));
-		 
+
 	}
-	
-	
+
+
 })
 </script>
