--- a/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
+++ b/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
@@ -5,7 +5,7 @@
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/haberes/liquidacionMes.js")" type="text/javascript"></script>
 }
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.haberes.mainHaberes("Vista Liquidación",scripts) {
 	<div class="page-header">
@@ -14,7 +14,7 @@
 				<h1>Vista Liquidación</h1>
 			</div>
 			<div class="col-sm-5">
-			
+
 			 	<div class="dropdown pull-right">
 					<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 					<i class="glyphicon glyphicon-list-alt"></i>
@@ -63,29 +63,29 @@
 				  		}
 				  		@if(Permiso.check("lmReporteComparativoPeriodoAnterior")) {
 				  		<li role="presentation"><a id="comparativoPeriodoAnterior" role="menuitem" tabindex="-1" href="@controllers.haberes.routes.LiquidacionMesesReportesController.listadoDePuestoLaboralComparativoPeriodo(lc.id)">Comparativo Periodo anterior</a></li>
-						}					
-					</ul>	  
-				</div> 
+						}
+					</ul>
+				</div>
 				<div class="pull-right btn-header">
 					<a href="@controllers.haberes.routes.LiquidacionMesesController.crear()"  class="pull-right btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Liquidación</a>
 				</div>
-					
+
 			</div>
 		</div>
-	</div>		
+	</div>
 
 @views.html.tags.successError()
-	
+
 	<div class="row menu-acciones">
 		<div class="col-sm-10">
 			<a href="@controllers.haberes.routes.LiquidacionMesesController.editar(lc.id)@UriTrack.get("&")"  class="btn btn-default"><i class="glyphicon glyphicon-edit"></i> Editar</a>
 			<a href="@controllers.haberes.routes.LiquidacionMesesController.eliminar(lc.id)@UriTrack.get("&")"  class="btn btn-default delete-confirm-link"><i class="glyphicon glyphicon-trash icono-eliminar"></i> Eliminar</a>
 		</div>
 		<div class="col-sm-2">
-			<a href="@UriTrack.getOnNull(controllers.haberes.routes.LiquidacionMesesController.index().absoluteURL())" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a> 
-		</div> 
-	</div>	
-	
+			<a href="@UriTrack.getOnNull(controllers.haberes.routes.LiquidacionMesesController.index().absoluteURL())" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
+		</div>
+	</div>
+
 	<input type="hidden" id="liquidacionMesId" name="liquidacionMesId" value="@lc.id"/>
 	<div class="row">
 		<div class="col-sm-2">
@@ -93,20 +93,20 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="radio">
-						<label class="control-label"> 
+						<label class="control-label">
 							@inputRadioGroup(lcForm("convenio_ministerio"), options = Seq("true"->"SI"), 'disabled -> "disabled")
 						</label>
 					</div>
 				</div>
 				<div class="col-sm-7">
 					<div class="radio">
-						<label class="control-label"> 
+						<label class="control-label">
 							@inputRadioGroup(lcForm("convenio_ministerio"),options = Seq("false"->"NO"), 'disabled -> "disabled")
 						</label>
 					</div>
 				</div>
 			</div>
-		</div> 
+		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
 				<label class="control-label">N° Liquidación</label>
@@ -124,7 +124,7 @@
 				<label for="@lcForm("liquidacionTipo")" class="control-label">Liquidacion Tipo</label>
 				<p class="form-control-static form-control">@lcForm.field("liquidacionTipo.nombre").value</p>
 			</div>
-		</div> 
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-2">
@@ -135,62 +135,62 @@
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="periodo" class="control-label">Periodo</label> 
-				<p class="form-control-static form-control">@lcForm.field("periodo.nombre").value</p> 
+				<label for="periodo" class="control-label">Periodo</label>
+				<p class="form-control-static form-control">@lcForm.field("periodo.nombre").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="expediente" class="control-label">Expediente</label> 
-				<p class="form-control-static form-control">@lcForm.field("expediente.expedienteEjercicio").value</p> 
+				<label for="expediente" class="control-label">Expediente</label>
+				<p class="form-control-static form-control">@lcForm.field("expediente.expedienteEjercicio").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="ordenPago" class="control-label">Orden de pago N°</label> 
+				<label for="ordenPago" class="control-label">Orden de pago N°</label>
 				<p class="form-control-static form-control">
-				@if(lc.ordenPago != null){ 
+				@if(lc.ordenPago != null){
 					@lcForm.field("ordenPago.ordenEjercicio").value
 				}
-				</p> 
+				</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="fecha_orden_pago" class="control-label">Fecha orden de pago</label> 
-				<p class="form-control-static form-control">@lcForm.field("fecha_orden_pago").value</p> 
+				<label for="fecha_orden_pago" class="control-label">Fecha orden de pago</label>
+				<p class="form-control-static form-control">@lcForm.field("fecha_orden_pago").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="fecha_pago" class="control-label">Fecha de pago</label> 
-				<p class="form-control-static form-control">@lcForm.field("fecha_pago").value</p> 
+				<label for="fecha_pago" class="control-label">Fecha de pago</label>
+				<p class="form-control-static form-control">@lcForm.field("fecha_pago").value</p>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="expediente" class="control-label">Expediente Aporte</label> 
-				<p class="form-control-static form-control">@lcForm.field("expedienteAporte.expedienteEjercicio").value</p> 
+				<label for="expediente" class="control-label">Expediente Aporte</label>
+				<p class="form-control-static form-control">@lcForm.field("expedienteAporte.expedienteEjercicio").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="expediente" class="control-label">Exp. Seguro Vida</label> 
-				<p class="form-control-static form-control">@lcForm.field("expedienteSeguroVida.expedienteEjercicio").value</p> 
+				<label for="expediente" class="control-label">Exp. Seguro Vida</label>
+				<p class="form-control-static form-control">@lcForm.field("expedienteSeguroVida.expedienteEjercicio").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="expediente" class="control-label">Exp. Seguro Sepelio</label> 
-				<p class="form-control-static form-control">@lcForm.field("expedienteSeguroSepelio.expedienteEjercicio").value</p> 
+				<label for="expediente" class="control-label">Exp. Seguro Sepelio</label>
+				<p class="form-control-static form-control">@lcForm.field("expedienteSeguroSepelio.expedienteEjercicio").value</p>
 			</div>
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="expediente" class="control-label">Exp. Contribuciones</label> 
-				<p class="form-control-static form-control">@lcForm.field("expedienteContribuciones.expedienteEjercicio").value</p> 
+				<label for="expediente" class="control-label">Exp. Contribuciones</label>
+				<p class="form-control-static form-control">@lcForm.field("expedienteContribuciones.expedienteEjercicio").value</p>
 			</div>
 		</div>
 		<div class="col-sm-4">
@@ -201,7 +201,7 @@
 		</div>
 	</div>
 	<div class="row">
-		
+
 	</div>
 	<hr>
 	<div class="row">
@@ -209,7 +209,7 @@
 		<div class="panel panel-default">
 			<div class="panel-heading"><b>Totales</b></div>
 				<div class="panel-body">
-			
+
 					<div class="row margin-bottom-25">
 						<div class="col-sm-12">
 							<h4>Total Personas: <b>@lc.cantidad_liquidaciones_puestos</b></h4>
@@ -225,18 +225,18 @@
 							<h4>Total Embargo:<b>@if(lc.getTotalEmbargo() != null){@utils.NumberUtils.moneda(lc.getTotalEmbargo())}</b></h4>
 							<h4>Total C.PrestaFacil:<b>@if(lc.getTotalPrestafacil() != null){@utils.NumberUtils.moneda(lc.getTotalPrestafacil())}</b></h4>
 							<h4>Total C.Iprodha:<b>@if(lc.getTotalIprodha() != null){@utils.NumberUtils.moneda(lc.getTotalIprodha())}</b></h4>
-							
+
 							@if(lc.getTotalMutual() != null){
 								<h4>Total Federacion:<b>@utils.NumberUtils.moneda(lc.getTotalMutual())</b></h4>
 							}
-							
+
 							@if(lc.getTotalCuotaMutual() != null){
 								<h4>Total Cuota Fed.:<b>@utils.NumberUtils.moneda(lc.getTotalCuotaMutual())</b></h4>
 							}
 							@if(lc.getTotalYacare() != null){
 								<h4>Total Yacare:<b>@utils.NumberUtils.moneda(lc.getTotalYacare())</b></h4>
 							}
-							
+
 							<hr>
 							<h3><b>Total Ret.: @if(lc.getTotalRetenciones() != null){@utils.NumberUtils.moneda(lc.getTotalRetenciones())}</b></h3>
 							<h3><b>Total a Cobrar: @if(lc.getTotalACobrar() != null){@utils.NumberUtils.moneda(lc.getTotalACobrar())}</b></h3>
@@ -245,13 +245,13 @@
 							<h4>Total C/P Obra Social: 	<b>@if(lc.getContribucionesPatronalesObraSocial() != null){@utils.NumberUtils.moneda(lc.getContribucionesPatronalesObraSocial())}</b></h4>
 							<h4>Total C/P Jubilacion: 	<b>@if(lc.getContribucionesPatronalesJubilacion() != null){@utils.NumberUtils.moneda(lc.getContribucionesPatronalesJubilacion())}</b></h4>
 							<h4>Costo Total Liquidacion: 	<b>@if(lc.getTotalAPagar() != null){@utils.NumberUtils.moneda(lc.getTotalAPagar())}</b></h4>
-							
-							<h4>Estado: 
+
+							<h4>Estado:
 								<b>@lc.estado.nombre</b>
 							</h4>
 						</div>
 					</div>
-		
+
 				</div>
 			</div>
 		</div>
@@ -269,8 +269,8 @@
 					</div>
 					<div class="row margin-bottom-25">
 						<div class="col-sm-12">
-							
-							@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(lc.estado.orden,models.Estado.TIPO_LIQUIDACION_MESES)) {	
+
+							@for(estado <- models.Estado.getSiguienteEstadoPorAprobar(lc.estado.orden,models.Estado.TIPO_LIQUIDACION_MESES)) {
 								@if(estado.orden <=6) {
 									<div class="margin-bottom-25">
 									<a href="@controllers.haberes.routes.LiquidacionMesesController.cambiarEstado(lcForm.field("id").value.toInt, estado.id.toLong)@UriTrack.get("&")" class="btn btn-default">
@@ -292,7 +292,7 @@
 							</div>
 						</div>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
@@ -305,44 +305,44 @@
 							<div class="col-sm-12 margin-bottom-25">
 								<a href="@controllers.haberes.routes.LiquidacionPuestosReportesController.reciboSueldosByLiquidacionMes(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-list-alt"></i> Recibos de Sueldos</a>
-								
+
 							</div>
 							<!-- <div class="col-sm-12 margin-bottom-25">
 								<a id="exportBanco" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportMacroSueldos(lc.id,false)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i> Datos exportacion MACRO SUELDOS</a>
-								
+
 							</div> -->
 							<div class="col-sm-12 margin-bottom-25">
 								<a id="exportBancoNew" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportMacroSueldos(lc.id,true)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i> Datos exportacion MACRO SUELDOS NUEVO</a>
-								
+
 							</div>
 							<div class="col-sm-12 margin-bottom-25">
 								<a id="exportBanco" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportBanco(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i> Datos exportacion banco</a>
-								
+
 							</div>
 							<div class="col-sm-12 margin-bottom-25">
 								<a href="@controllers.haberes.routes.LiquidacionAccionesController.exportIps(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-info-sign"></i> Datos IPS</a>
-								
+
 							</div>
 							<div class="col-sm-12 margin-bottom-25">
 								<a href="@controllers.haberes.routes.LiquidacionAccionesController.exportAfip(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-th-large"></i> Datos AFIP</a>
-								
+
 							</div>
 							<div class="col-sm-12">
 								<a href="@controllers.haberes.routes.LiquidacionPuestosReportesController.libroSueldos(lc.id)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-align-justify"></i> Libro de Sueldos</a>
-								
+
 							</div>
 						}
 					</div>
 				</div>
 			</div>
-		</div> 	  	 	  	 
-	</div> 
+		</div>
+	</div>
 	<hr>
 	<div class="row">
 	 	<table class="table table-striped table-bordered">
@@ -361,9 +361,13 @@
 				@for(lcd <- dataPorConcepto) {
 				<tr>
 					<td>
-						<a class="exportDatosPorConceptoxx" 
+						@if(Permiso.check("liquidacionPuestoIndex")) {
+						<a class="exportDatosPorConceptoxx"
 						   href="@controllers.haberes.routes.LiquidacionMesesReportesController.exportDatosPorConcepto(lc.id,lcd.getLong("""id"""))">
 						   @lcd.getString("codigo")</a>
+						}else{
+							@lcd.getString("codigo")
+						}
 					</td>
 					<td>@lcd.getString("deno")</td>
 					<td>@lcd.getInteger("totalCantidad")</td>
@@ -391,9 +395,9 @@
 				}
 	        </tbody>
         </table>
-	</div>  
-	 
-	 
-	
-	 
+	</div>
+
+
+
+
 }
