--- a/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/indexLicenciaNovedadesLiquidacion.scala.html
@@ -6,3 +6,158 @@
 	<script src="@routes.Assets.at("javascripts/rrhh/agentes.js")" type="text/javascript"></script>
 }
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
+
+@views.html.rrhh.mainRrhh("Lista Licencias por Periodos",scripts) {
+<div class="page-header">
+	<div class="row">
+		<div class="col-sm-7">
+			<h1>Lista de Agentes</h1>
+		</div>
+
+		<div class="col-sm-5">
+			<div class="dropdown pull-right">
+			 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+			 	<i class="glyphicon glyphicon-list-alt"></i>
+			    Reportes
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+
+			  </ul>
+			</div>
+
+			<div class="dropdown pull-right btn-header">
+			 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+			 	<i class="glyphicon glyphicon-cog"></i>
+			    Acciones
+			    <span class="caret"></span>
+			  </button>
+
+			</div>
+
+			<div class="pull-right btn-header">
+			</div>
+		</div>
+
+
+	</div>
+</div>
+	@views.html.tags.successError()
+<div id="actions">
+
+	<form action="" id="formSearchAgentes" method="GET">
+
+		<div class="row" >
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="nombre" class="control-label">Nombre
+					@inputText(formBuscador("nombre"), 'class -> "form-control")
+					</label>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="cuit" class="control-label">DNI
+					@inputText(formBuscador("dni"), 'class -> "form-control")
+					</label>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<div class="form-group">
+					<label for="cuit" class="control-label">Cuit
+					@inputText(formBuscador("cuit"), 'class -> "form-control")
+					</label>
+				</div>
+			</div>
+			<div class="col-sm-2">
+				<label for="inputPeriodo" class="control-label">Periodo</label>
+				<div class="input-group">
+					@inputText(formBuscador("periodo"),'class -> "form-control",'id -> "periodo")
+					@inputText(formBuscador("periodo_id"),'hidden -> "hidden",'id -> "periodo_id")
+					<span class="input-group-addon">
+					<a href="#" class="searchModal"
+								id="searchPeriodo"
+								data-title="Selección de Periodo"
+								data-url="@controllers.contabilidad.routes.PeriodosController.modalBuscar()"
+								data-height="650"
+								data-width="700"
+								data-listen="modal.seleccion.periodo.simple"
+								data-label="#periodo"
+								data-field="#periodo_id">
+						<i class="glyphicon glyphicon-search"></i>
+					</a>
+					</span>
+				</div>
+			</div>
+			<div class="col-sm-2">
+						<div class="form-group">
+						<label for="nombre" class="control-label">&nbsp;</label>
+						<button  class="form-control btn btn-primary">Buscar</button>
+						</div>
+					</div>
+					<div class="col-sm-2">
+						<div class="form-group">
+						<label for="nombre" class="control-label">&nbsp;</label>
+						<a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.indexLicenciaNovedadesLiquidacion()"  class="form-control btn btn-default">Limpiar</a>
+						</div>
+					</div>
+
+		</div>
+	</form>
+	</div>
+
+	@if(buscador.getTotalRowCount == 0) {
+
+        <div class="well">
+            <em>No se encuentran licencias</em>
+        </div>
+
+    } else {
+    	Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
+		<table class="table table-striped table-bordered">
+			<thead>
+				<tr>
+					<th width="30">
+						<input type="checkbox" name="checkAll" id="checkAll"/>
+					</th>
+					<th width="30">#</th>
+					<th>Agente</th>
+					<th>Periodo</th>
+					<th>Dias</th>
+					<th>Año</th>
+					<th>Inicio</th>
+					<th>Fin</th>
+
+					<th width="30">#</th>
+				</tr>
+			</thead>
+			<tbody>
+			@for(linea <- buscador.getList) {
+				<tr>
+					<td width="30"><input type="checkbox" name="checkAll" id="checkAll"/></td>
+					<td width="50"></td>
+					<td>@if(linea.agenteAsistenciaLicencia != null){@linea.agenteAsistenciaLicencia.agente.apellido}</td>
+					<td>@linea.periodo.nombre</td>
+					<td>@linea.dias</td>
+
+					<td>@linea.agenteAsistenciaLicencia.ejercicio.nombre</td>
+					<td>@if(linea.agenteAsistenciaLicencia.finicio != null){@(utils.DateUtils.formatDate(linea.agenteAsistenciaLicencia.finicio))}</td>
+					<td>@if(linea.agenteAsistenciaLicencia.ffin != null){@(utils.DateUtils.formatDate(linea.agenteAsistenciaLicencia.ffin))}</td>
+					<td class="50"></td>
+				</tr>
+
+			}
+			</tbody>
+        </table>
+
+        <div class="pagination pull-right">
+		    @views.html.helpers.paginador(buscador, controllers.rrhh.routes.AgentesAsistenciasLicenciasController.indexLicenciaNovedadesLiquidacion())
+		</div>
+
+    }
+
+
+
+
+}
